update build cors vps